k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: urbaninvest
  labels:
    name: urbaninvest
    app: urbaninvest-platform
